changed the index file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-    <head></head>
+    
     <body>
         <h1>First Page</h1>
+        <p>this is a great tutorial</p>
     </body>
-    <html></html>
+    
 </html>
