--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-    
+    <head></head>
     <body>
         <h1>First Page</h1>
         <p>this is a great tutorial</p>
+        <footer>copyrights to codingphase</footer>
     </body>
     
 </html>
